0.4.1
-----
1. Fix setting of Christmas filter.

0.4.0
-----
1. Allow specifying maximum BPM difference between tracks.
2. Fix filtering on Christmas - fix is in bliss-mixer.
3. Fix chroma weight setting.
4. If only have non-local sources then fall back to LastMix.

0.3.1
-----
1. Rebuild Linux binaries on Debian Stretch.

0.3.0
-----
1. Allow genres in genre groups to use wildcard, and other regular expressions.
2. Allow supplying weights for bliss metrics.

0.2.1
-----
1. Re-add vcruntime140.dll to 'Bin/windows'

0.2.0
-----
1. If LMS is password protected, then allow user to specify a specific port on
   which to run the mixer.

0.1.1
-----
1. Fix ARM-64 binary path.

0.1.0
-----
1. Add support for CUE tracks.
2. Get LMS IP from 'Slim::Utils::Network::serverAddr()'

0.0.2
-----
1. Ensure all prefs are prefixed pref_ in settings HTML file.
2. Add 'Bin/windows' to LMS's bin search paths if running under windows.
   Likewise add 'Bin/mac' for mac.
3. Rename 'Bin/darwin' to 'Bin/mac' as this is now added to the search path.
4. Add vcruntime140.dll to 'Bin/windows'
5. Don't repeatedly start mixer when API/DSTM invoked.
6. Do path conversion (remove/add media dir) in plugin before/after calling
   mixer.
7. Support setting 'mixerdebug: 1' in 'prefs/plugin/blissmixer.prefs' to enable
   bliss-mixer debug.

0.0.1
-----
1. Initial release.