@@ -1,6 +1,7 @@
 0.4.1
 -----
 1. Fix setting of Christmas filter.
+2. Only look at audio media dirs when parsing paths.
 
 0.4.0
 -----
